@@ -9,6 +9,9 @@ cod-tools (unreleased)
     - dependency installer for Fedora 40.
     - dependency installer for Ubuntu 24.04.
   * Changed:
+    - COD::CIF::Data::CIF2COD:
+        - updated the recognition and handling of IUCr journals in the
+          get_coeditor_code() subroutine.
     - clarified option descriptions of the 'cif2cod' script.
     - sdf_add_cod_data:
         - rewrote the script in Perl.
